@@ -7,6 +7,7 @@ version next:
 - boxblur filter added
 - BWF muxer
 - Flash Screen Video 2 decoder
+- lavfi input device added
 
 
 version 0.8:
